# Tomato

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Sandbox/: CMakeLists.txt
Sandbox/src/: app.cpp  main.cpp
Tomato/: CMakeLists.txt  spdlog-pch.h  spdlog-pch.hpp  std-pch.hpp
Tomato/include/: Engine.h
Tomato/include/Tomato/: Application.h  Application.hpp  EntryPoint.h  EntryPoint.hpp  Logger.h  Logger.hpp
Tomato/src/: Application.cpp  Application.h  Core.h  Core.hpp  EntryPoint.h  Logger.cpp  Logger.h  Window.hpp
Tomato/src/events/: Application.h  Application.hpp  Event.h  Event.hpp  Key.h  Key.hpp  Mouse.h  Mouse.hpp
Tomato/src/platform/: WindowLinux.cpp  WindowLinux.hpp
